# sentchart

./: README.md  build.gradle.kts  settings.gradle.kts
application/: build.gradle.kts
application/src/main/java/dev/sentchart/application/: App.java  ApplicationInvoker.java
application/src/main/java/dev/sentchart/application/chart/: FourierChart.java  FourierSample.java
application/src/main/java/dev/sentchart/application/controller/: MainController.java
application/src/main/java/dev/sentchart/application/element/: FileElement.java
application/src/main/java/dev/sentchart/io/: DataBufferReader.java  SignalPoint.java  SignalPointsDataBufferReader.java  UnsupportedFileFormatException.java
application/src/main/resources/dev/sentchart/application/: main.fxml  style.css
application/src/main/resources/dev/sentchart/application/element/: file_element.fxml
gradle/wrapper/: gradle-wrapper.properties
sentchart-math/: build.gradle.kts  gradle.properties
sentchart-math/src/main/cpp/: CMakeLists.txt  dev_sentchart_math_NativeMath.h  fourier.cpp
sentchart-math/src/main/java/dev/sentchart/: LibrariesLoader.java
sentchart-math/src/main/java/dev/sentchart/jni/: LibraryUtils.java
sentchart-math/src/main/java/dev/sentchart/math/: FFTCalculator.java  NativeMath.java
